[package]
name = "kvs"
version = "0.1.0"
authors = ["KaFai Choi <kafaicoder@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
structopt = "0.2.18"
tempfile = "3.0.7"
walkdir = "2.2.7"
failure = "0.1.5"
failure_derive = "0.1.5"
serde = "1.0.98"
serde_json = "1.0.40"
bincode = "1.1.4"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
