[package]
name = "kvs"
version = "0.1.0"
authors = ["KaFai Choi <kafaicoder@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
structopt = "0.2.18"
failure = "0.1.5"
failure_derive = "0.1.5"
serde = "1.0.98"
serde_json = "1.0.40"
bincode = "1.1.4"
slog = "2.5.2"
slog-json = "2.3.0"
slog-async = "2.3.0"
slog-stdlog = "3.0.5"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
